# halcn

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
programs/halcn-core/: Cargo.toml
programs/halcn-core/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs  utils.rs
programs/halcn-core/src/instructions/: detect_signal.rs  mod.rs  predict_impact.rs  propagate.rs
scripts/: deploy.sh  setup-validator.sh  test.sh
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  errors.ts  index.ts  propagation.ts  types.ts  utils.ts
sdk/tests/: client.test.ts  propagation.test.ts
