[workspace]
members = [
    "programs/halcn-core",
]
resolver = "2"

[workspace.metadata]
name = "halcn"
version = "0.4.2"
description = "Cross-Market Signal Propagation Protocol - Predict where signals land before they arrive"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
